🌖🚊 Checkpoint ./.glitch-assets:31343558/1353 ./blog/style.css:31343558/297 ./blog/1.html:31343558/830 ./script.js:31343558/212 ./index.html:31343558/493 ./style.css:31343558/19

--- a/blog/style.css
+++ b/blog/style.css
@@ -1,3 +1,17 @@
+body{
+  padding: 50px;
+}
+h1{
+  text-align: center;
+}
 p{
-  color: blue;
+  text-align: center;
+  font-size: 
+}
+
+.imgExample{
+  width: 25vw;
+  border-radius: 25px;
+  padding: 20px;
+  margin: auto;
 }
