--- a/blog/style.css
+++ b/blog/style.css
@@ -1,22 +1,19 @@
 body{
-  padding: 75px;
+  padding: 60px 100px;
+  margin: auto;
 }
 h1{
   text-align: center;
+  font-size: 60px;
 }
 p{
   text-align: center;
+  font-size: 
 }
 img{
   border: 5px solid #ff8c00;
-}
-
-.imgExample{
-  width: 25vw;
+  width: 50vw;
   border-radius: 30px;
+  display: block;
   margin: auto;
-}
-
-table{
-  margin: 25px;
 }
