👚🛎 Checkpoint ./blog/style.css:31343558/76 ./blog/1.html:31343558/84857

--- a/blog/style.css
+++ b/blog/style.css
@@ -24,7 +24,7 @@ img{
   display: block;
   margin: auto;
 }
-.text code {
+.code {
   font-family: "Roboto Mono", monospace;
   font-size: 15px;
   display: block;
@@ -34,8 +34,8 @@ img{
   margin: auto auto 30px;
   padding: 15px;
   border-radius: 15px;
-  left: 100%
+  text-align: left
 }
-.text code span {
+span {
   padding-left: 1em;
 }
