--- a/blog/style.css
+++ b/blog/style.css
@@ -34,7 +34,9 @@ img{
   margin: auto auto 30px;
   padding: 15px;
   border-radius: 15px;
-  text-align: left
+  text-align: left;
+  overflow: auto;
+  white-space: nowrap;
 }
 span {
   padding-left: 1em;
