--- a/blog/style.css
+++ b/blog/style.css
@@ -19,6 +19,7 @@ p {
   font-family: "Radio Canada", sans-serif;
   margin-left: 150px;
   margin-right: 150px;
+  line-height: 1.25;
 }
 .date {
   font-size: 20px;
