--- a/blog/style.css
+++ b/blog/style.css
@@ -1,7 +1,8 @@
 body {
   padding: 60px 100px;
   margin: auto;
-  color:black;
+  color: black;
+  background-color: #D2691E
 }
 @font-face {
   font-family: lucid;
@@ -10,7 +11,7 @@ body {
 h1 {
   text-align: center;
   font-family: lucid;
-  color:#070D0D;
+  color: #070D0D;
   font-size: 50px;
 }
 p {
