--- a/blog/style.css
+++ b/blog/style.css
@@ -27,7 +27,7 @@ p {
   font-family: "Radio Canada", sans-serif;
 }
 img {
-  border: 4px solid #8b4513;
+  border: 4px solid black;
   width: 70%;
   border-radius: 30px;
   display: block;
