--- a/blog/style.css
+++ b/blog/style.css
@@ -18,9 +18,9 @@ p {
   text-align: center;
   font-size: 25px;
   font-family: "Radio Canada", sans-serif;
-  margin-left: 150px;
-  margin-right: 150px;
   line-height: 1.25;
+  width: 75%;
+  margin-inline: auto;
 }
 .date {
   font-size: 20px;
@@ -57,32 +57,17 @@ a{
   h1 {
     font-size: 70px;
   }
-  .post {
-    width: 40%;
   }
-  p,
-  .text *:not(h1, h2, .date, .media *) {
-    width: 80%;
-  }
-}
 @media (max-width: 800px) {
-  body,
-  .text {
+  body {
     padding: 15px;
   }
   h1 {
     font-size: 40px;
   }
-  .post,
-  p,
-  .button,
-  .text * {
-    width: 100% !important;
+  p {
+    width: 100%;
+    
   }
-  .text p {
-    text-indent: 0px;
-  }
-  .post {
-    margin: 15px;
-  }
+
 }
