🚔👆 Checkpoint ./blog/style.css:31343558/201

--- a/blog/style.css
+++ b/blog/style.css
@@ -64,10 +64,18 @@ a{
   }
   h1 {
     font-size: 40px;
+    letter-spacing: -2px;
   }
   p {
     width: 100%;
-    
+  }
+  img{
+    width: 90%;
+  }
+  pre{
+    width: 90%;
+    overflow: auto;
+    display: block;
   }
 
 }
