--- a/blog/style.css
+++ b/blog/style.css
@@ -64,9 +64,12 @@ button{
   list-style-type: none;
   margin: 0;
   width: 100%;
-  background-color: #f1f1f1;
+  background-color: #E4EDF6;
   cursor: pointer;
   float: right;
+  border: 4px solid #0F202F;
+  border
+
 }
 
 button:hover{
