--- a/blog/style.css
+++ b/blog/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 60px 15px;
+  padding: 10px 15px;
   margin: auto;
   color: black;
   background-color: #343a40;
@@ -15,6 +15,7 @@ h1 {
   font-size: 60px;
   width: 85%;
   margin: auto;
+  margin-top: 50px;
 }
 p {
   text-align: center;
@@ -57,18 +58,12 @@ a{
 
 button{
   display: block;
-  color: #000000;
   padding: 8px 16px;
-  text-decoration: none;
-  font-size: 15px;
-  list-style-type: none;
-  margin: 0;
-  width: 100%;
+  font-size: 35px;
   background-color: #E4EDF6;
   cursor: pointer;
-  float: right;
   border: 4px solid #0F202F;
-  border
+  border-radius: 10px;
 
 }
 
@@ -76,7 +71,26 @@ button:hover{
   transition-duration: .4s;
   background-color: #92b6db;
   color:white;
-  transform: scale(1.04);
+  transform: scale(1.06);
+}
+
+table{
+  width: 100%;
+}
+
+td{
+  width: 33.3%;
+}
+
+.homeButton{
+  border: 0px;
+  width: 40%;
+  margin: auto;
+  cursor: pointer;
+}
+
+.next{
+  float: right;
 }
 
 @media (max-width: 1300px) {
