👘🚃 Checkpoint ./blog/style.css:31343558/242 ./index.html:31343558/19 ./script.js:31343558/35 ./blog/1/index.html:31343558/3636 ./blog/2/index.html:31343558/327 ./blog/3/index.html:31343558/327

--- a/blog/style.css
+++ b/blog/style.css
@@ -64,6 +64,7 @@ button{
   cursor: pointer;
   border: 4px solid #0F202F;
   border-radius: 10px;
+  color: black;
 
 }
 
@@ -84,7 +85,7 @@ td{
 
 .homeButton{
   border: 0px;
-  width: 40%;
+  width: 160px;
   margin: auto;
   cursor: pointer;
 }
@@ -121,4 +122,16 @@ td{
     display: block;
   }
 
+}
+@media (max-width: 500px) {
+  .homeButton{
+    width: 100px;
+  }
+  
+  button{
+    font-size: 15px;
+    padding: 6px 12px;
+    
+  }
+  
 }
