--- a/style.css
+++ b/style.css
@@ -4,19 +4,22 @@ body{
 }
 
 .navbar{
-  display: block;
   font-size: 35px;
   background-color: #E4EDF6;
   cursor: pointer;
   color: black;
   padding-top: 5px;
-  
 }
 
 a{
   padding-left: 10px;
+  text-align: center;
+  margin: auto;
+  
 }
+
 img{
   width: 75px;
   padding-left: 5px;
+  padding-right: 25px;
 }
