--- a/style.css
+++ b/style.css
@@ -13,9 +13,10 @@ body{
 
 a{
   padding-left: 10px;
-  text-align: center;
-  margin: auto;
-  
+  display: inline-block;
+  overflow: hidden;
+  padding-bottom: 10px;
+  cursor: pointer;
 }
 
 img{
