--- a/style.css
+++ b/style.css
@@ -1,12 +1,10 @@
-
-
 body{
   background-color: #343a40;
   margin: 0px;
 }
 
 .navbar{
-  font-size: 35px;
+  font-size: 20px;
   background-color: #E4EDF6;
   cursor: pointer;
   color: black;
@@ -14,6 +12,8 @@ body{
 }
 
 a{
+  margin-top: 0px;
+  padding-top: 0px;
   padding-left: 10px;
   display: inline-block;
   overflow: hidden;
@@ -23,7 +23,32 @@ a{
 }
 
 img{
-  width: 75px;
+  width: 60px;
   padding-left: 5px;
-  padding-right: 25px;
+  padding-right: 15px;
+}
+.topnav {
+  background-color: #333333;
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #dddddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: #04AA6D;
+  color: white;
 }
