--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap');
+
+
 body{
   background-color: #343a40;
   margin: 0px;
@@ -20,8 +24,10 @@ img{
   padding: 10px 12px;
   font-size: 25px;
   cursor: pointer;
-  font-family: 'Ubuntu', sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
+  text-decoration: none;
 }
+
 
 .topnav a:hover {
   background-color: #dddddd;
