--- a/style.css
+++ b/style.css
@@ -1,13 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
 
-
-body{
+body {
   background-color: #343a40;
   margin: 0px;
 }
 
-img{
+img {
   width: 60px;
   padding-left: 5px;
   padding-right: 15px;
@@ -21,22 +20,145 @@ img{
 .topnav a {
   display: inline-block;
   overflow: hidden;
-  color: #CFDCEE;
+  color: #cfdcee;
   padding: 10px 12px;
   font-size: 25px;
   cursor: pointer;
-  font-family: 'Ubuntu Condensed', sans-serif;
+  font-family: "Ubuntu Condensed", sans-serif;
   text-decoration: none;
 }
-
 
 .topnav a:hover {
   opacity: 0.6;
 }
 
-h1{
+h1 {
   text-align: center;
   color: #b4c9e4;
-  font-family: 'Ubuntu', sans-serif;
-
+  font-family: "Ubuntu", sans-serif;
+}
+html {
+  font-size: 16px;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
+}
+*,
+:after,
+:before {
+  box-sizing: border-box;
+  margin: 0;
+}
+.simple-page {
+  background: #f1f2f6;
+}
+.pw_report_ad_container {
+  display: none !important;
+}
+.container[data-v-2c15efda] {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #333;
+}
+.follow-block[data-v-2c15efda] {
+  background-color: #fff;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 37px;
+}
+.posts[data-v-2c15efda] {
+  display: grid;
+  margin-top: 10px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 15px 15px;
+}
+.site-title[data-v-2c15efda] {
+  font-size: 54px;
+  text-align: center;
+  padding-top: 60px;
+  margin-bottom: 35px;
+  font-weight: 700;
+  color: #333;
+}
+@media only screen and (max-width: 800px) {
+  .posts[data-v-2c15efda] {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 12px;
+    padding: 0 8px;
+  }
+  .site-title[data-v-2c15efda] {
+    padding-top: 45px;
+    font-size: 48px;
+  }
+  .made-by[data-v-2c15efda],
+  .site-title[data-v-2c15efda] {
+    margin-bottom: 30px;
+  }
+}
+.page-wrapper {
+  position: relative;
+  background: #fff;
+  height: 160px;
+  overflow: hidden;
+  border-radius: 7px;
+}
+@-webkit-keyframes background-move {
+  0% {
+    background-position: 50%;
+  }
+  to {
+    background-position: -1000px;
+  }
+}
+@keyframes background-move {
+  0% {
+    background-position: 50%;
+  }
+  to {
+    background-position: -1000px;
+  }
+}
+.link-background {
+  background-repeat: repeat, no-repeat;
+  background-color: #ededed;
+  background-position: 50%;
+  background-size: auto 100%;
+  height: 160px;
+  width: 100%;
+  position: static;
+  left: 0;
+  top: 0;
+  z-index: 1;
+}
+.link-background:hover {
+  -webkit-animation: background-move 50s linear infinite forwards;
+  animation: background-move 50s linear infinite forwards;
+}
+.link-title {
+  background: #fff;
+  padding: 14px 20px;
+  font-weight: 700;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  white-space: nowrap;
+  font-size: 22px;
+  border-radius: 5px;
+  display: flex;
+  align-items: flex-end;
+  z-index: 2;
+  color: #333 !important;
+}
+@media only screen and (max-width: 600px) {
+  .link-background:hover {
+    -webkit-animation: none;
+    animation: none;
+  }
 }
