--- a/style.css
+++ b/style.css
@@ -80,7 +80,6 @@ html {
 }
 
 .link-background {
-  background-repeat: repeat, no-repeat;
   background-color: #ededed;
   background-position: 50%;
   background-size: auto 100%;
@@ -90,6 +89,7 @@ html {
   left: 0;
   top: 0;
   z-index: 1;
+  border: 4px solid #0F202F;
 }
 
 .link-title {
@@ -99,7 +99,6 @@ html {
   position: absolute;
   left: 50%;
   top: 50%;
-  transform: translate(-50%, -50%);
   pointer-events: none;
   white-space: nowrap;
   font-size: 22px;
