🌛🚉 Checkpoint ./blog/index.html:31343558/432 ./style.css:31343558/1177

--- a/style.css
+++ b/style.css
@@ -38,3 +38,51 @@ h1 {
   font-family: "Ubuntu", sans-serif;
 }
 
+.container{
+  width: 25%
+}
+
+.backgroundImg{
+  width: 100%;
+}
+      .example {
+        position: relative;
+        padding: 0;
+        width: 300px;
+        display: block;
+        cursor: pointer;
+        overflow: hidden;
+      }
+      .info {
+        opacity: 0;
+        font-size: 40px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: #1c87c9;
+        background-color: rgba(200, 200, 200, 0.5);
+        width: 300px;
+        height: 300px;
+        -webkit-transition: all 400ms ease-out;
+        -moz-transition: all 400ms ease-out;
+        -o-transition: all 400ms ease-out;
+        -ms-transition: all 400ms ease-out;
+        transition: all 400ms ease-out;
+        text-align: center;
+      }
+      .example .info:hover {
+        opacity: 1;
+      }
+      .example .info p {
+        height: 0;
+        opacity: 1;
+        transition-delay: 0s;
+        transition-duration: 0.4s;
+      }
+      .example .info:hover p {
+        opacity: 1;
+        transform: translateY(250px);
+        -webkit-transform: translateY(250px);
+      }
+
+
