--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ h1 {
 .backgroundImg{
   width: 100%;
 }
-      .example {
+
+.example {
         position: relative;
         padding: 0;
         width: 300px;
@@ -53,7 +54,7 @@ h1 {
         cursor: pointer;
         overflow: hidden;
       }
-      .info {
+      .content {
         opacity: 0;
         font-size: 40px;
         position: absolute;
@@ -70,19 +71,18 @@ h1 {
         transition: all 400ms ease-out;
         text-align: center;
       }
-      .example .info:hover {
+      .example .content:hover {
         opacity: 1;
       }
-      .example .info p {
+      .example .content .text {
         height: 0;
         opacity: 1;
         transition-delay: 0s;
         transition-duration: 0.4s;
       }
-      .example .info:hover p {
+      .example .content:hover .text {
         opacity: 1;
         transform: translateY(250px);
         -webkit-transform: translateY(250px);
       }
-
 
