--- a/style.css
+++ b/style.css
@@ -38,51 +38,98 @@ h1 {
   font-family: "Ubuntu", sans-serif;
 }
 
-.container{
-  width: 25%
+html {
+  font-size: 16px;
+  word-spacing: 1px;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  box-sizing: border-box;
+  font-family: Roboto, sans-serif;
 }
 
-.backgroundImg{
+.container {
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+  color: #333333;
+}
+
+.posts {
+  display: grid;
+  margin-top: 10px;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 15px 15px;
+}
+
+@media only screen and (max-width: 800px) {
+  .posts {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 12px;
+    padding: 0 8px;
+  }
+}
+.page-wrapper {
+  position: relative;
+  background: #ffffff;
+  height: 160px;
+  overflow: hidden;
+  border-radius: 7px;
+}
+@-webkit-keyframes background-move {
+  0% {
+    background-position: 50%;
+  }
+  to {
+    background-position: -1000px;
+  }
+}
+@keyframes background-move {
+  0% {
+    background-position: 50%;
+  }
+  to {
+    background-position: -1000px;
+  }
+}
+.link-background {
+  background-repeat: repeat, no-repeat;
+  background-color: #ededed;
+  background-position: 50%;
+  background-size: auto 100%;
+  height: 160px;
   width: 100%;
+  position: static;
+  left: 0;
+  top: 0;
+  z-index: 1;
 }
 
-.example {
-        position: relative;
-        padding: 0;
-        width: 300px;
-        display: block;
-        cursor: pointer;
-        overflow: hidden;
-      }
-      .content {
-        opacity: 0;
-        font-size: 40px;
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: #1c87c9;
-        background-color: rgba(200, 200, 200, 0.5);
-        width: 300px;
-        height: 300px;
-        -webkit-transition: all 400ms ease-out;
-        -moz-transition: all 400ms ease-out;
-        -o-transition: all 400ms ease-out;
-        -ms-transition: all 400ms ease-out;
-        transition: all 400ms ease-out;
-        text-align: center;
-      }
-      .example .content:hover {
-        opacity: 1;
-      }
-      .example .content .text {
-        height: 0;
-        opacity: 1;
-        transition-delay: 0s;
-        transition-duration: 0.4s;
-      }
-      .example .content:hover .text {
-        opacity: 1;
-        transform: translateY(250px);
-        -webkit-transform: translateY(250px);
-      }
-
+.link-title {
+  background: #ffffff;
+  padding: 14px 20px;
+  font-weight: 700;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+  white-space: nowrap;
+  font-size: 22px;
+  border-radius: 5px;
+  display: flex;
+  align-items: flex-end;
+  z-index: 2;
+  color: #333333 !important;
+  opacity: 0
+}
+.link-title .link-background:hover{
+  opacity: 1;
+}
+@media only screen and (max-width: 600px) {
+  .link-background:hover {
+    -webkit-animation: none;
+    animation: none;
+  }
+}
