--- a/style.css
+++ b/style.css
@@ -41,10 +41,6 @@ h1 {
 html {
   font-size: 16px;
   word-spacing: 1px;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
   font-family: Roboto, sans-serif;
 }
@@ -59,13 +55,11 @@ html {
 .posts {
   display: grid;
   margin-top: 10px;
-  grid-template-columns: repeat(2, 1fr);
   grid-gap: 15px 15px;
 }
 
 @media only screen and (max-width: 800px) {
   .posts {
-    grid-template-columns: repeat(1, 1fr);
     grid-gap: 12px;
     padding: 0 8px;
   }
@@ -77,33 +71,13 @@ html {
   overflow: hidden;
   border-radius: 7px;
 }
-@-webkit-keyframes background-move {
-  0% {
-    background-position: 50%;
-  }
-  to {
-    background-position: -1000px;
-  }
-}
-@keyframes background-move {
-  0% {
-    background-position: 50%;
-  }
-  to {
-    background-position: -1000px;
-  }
-}
+
 .link-background {
-  background-repeat: repeat, no-repeat;
   background-color: #ededed;
   background-position: 50%;
   background-size: auto 100%;
   height: 160px;
   width: 100%;
-  position: static;
-  left: 0;
-  top: 0;
-  z-index: 1;
 }
 
 .link-title {
@@ -116,7 +90,7 @@ html {
   transform: translate(-50%, -50%);
   pointer-events: none;
   white-space: nowrap;
-  font-size: 22px;
+  font-size: 17px;
   border-radius: 5px;
   display: flex;
   align-items: flex-end;
@@ -124,6 +98,10 @@ html {
   color: #333333 !important;
   opacity: 0
 }
+.link-title:hover{
+  opacity: 1;
+}
 .link-background:hover + .link-title{
   opacity: 1;
 }
+
