--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ html {
 .posts {
   display: grid;
   margin-top: 10px;
+  grid-template-columns: repeat(3, 1fr);
   grid-gap: 15px 15px;
 }
 
@@ -62,6 +63,7 @@ html {
   .posts {
     grid-gap: 12px;
     padding: 0 8px;
+    grid-template-columns: repeat(1, 1fr);
   }
 }
 .page-wrapper {
@@ -104,4 +106,8 @@ html {
 .link-background:hover + .link-title{
   opacity: 1;
 }
+
+
+
+
 
