--- a/style.css
+++ b/style.css
@@ -75,11 +75,12 @@ html {
 }
 
 .link-background {
-  background-color: #ededed;
+  background-color: #E3EBF5;
   background-position: 50%;
   background-size: auto 100%;
   height: 160px;
   width: 100%;
+  background-repeat: no-repeat;
 }
 
 .link-title {
