--- a/style.css
+++ b/style.css
@@ -38,13 +38,6 @@ h1 {
   font-family: "Ubuntu", sans-serif;
 }
 
-html {
-  font-size: 16px;
-  word-spacing: 1px;
-  box-sizing: border-box;
-  font-family: Roboto, sans-serif;
-}
-
 .container {
   max-width: 900px;
   margin-left: auto;
@@ -75,7 +68,7 @@ html {
 }
 
 .link-background {
-  background-color: #E3EBF5;
+  background-color: #D4E0EF;
   background-position: 50%;
   background-size: auto 100%;
   height: 160px;
@@ -99,7 +92,9 @@ html {
   align-items: flex-end;
   z-index: 2;
   color: #333333 !important;
-  opacity: 0
+  opacity: 0;
+  font-size: 16px;
+  font-family: Roboto, sans-serif;
 }
 .link-title:hover{
   opacity: 1;
