--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ h1 {
 }
 
 .link-background {
-  background-color: #D4E0EF;
+  background-color: #E2EAF5;
   background-position: 50%;
   background-size: auto 100%;
   height: 160px;
