--- a/style.css
+++ b/style.css
@@ -56,9 +56,18 @@ h1 {
   .posts {
     grid-gap: 12px;
     padding: 0 8px;
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(2, 1fr);
   }
 }
+
+@media only screen and (max-width: 500px) {
+  .posts {
+    grid-gap: 10px;
+    padding: 0 8px;
+    grid-template-columns: repeat(1, 2fr);
+  }
+}
+  
 .page-wrapper {
   position: relative;
   background: #ffffff;
