--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0px;
 }
 
-img {
+.homeImg {
   width: 60px;
   padding-left: 5px;
   padding-right: 15px;
@@ -64,7 +64,7 @@ h1 {
     font-size: 15px;
   }
   
-  img {
+  .homeImg {
     width: 45px;
     padding-left: 3px;
     padding-right: 8px;
