--- a/blog/style.css
+++ b/blog/style.css
@@ -34,7 +34,7 @@ p {
 }
 img {
   border: 4px solid #0F202F;
-  width: 70%;
+  width: 60%;
   border-radius: 30px;
   display: block;
   margin: auto;
@@ -54,6 +54,16 @@ pre {
 
 a{
   color: #538FC7;
+}
+
+h2{
+  text-align: center;
+  font-family: lucid;
+  color: #82AED6;
+  font-size: 60px;
+  width: 85%;
+  margin: auto;
+  margin-top: 50px;
 }
 
 button{
