--- a/blog/style.css
+++ b/blog/style.css
@@ -38,6 +38,7 @@ img {
   border-radius: 30px;
   display: block;
   margin: auto;
+  margin-top: 10px;
 }
 pre {
   border: 4px solid #0F202F;
@@ -59,8 +60,8 @@ a{
 h2{
   text-align: center;
   font-family: lucid;
-  color: #82AED6;
-  font-size: 60px;
+  color: #A4C4E2;
+  font-size: 40px;
   width: 85%;
   margin: auto;
   margin-top: 50px;
@@ -109,9 +110,12 @@ td{
     padding: 30px;
   }
   h1 {
-    font-size: 70px;
+    font-size: 50px;
   }
+  h2 {
+    font-size: 35px;
   }
+}
 @media (max-width: 800px) {
   body {
     padding: 15px;
@@ -130,6 +134,9 @@ td{
     width: 90%;
     overflow: auto;
     display: block;
+  }
+  h2{
+    font-size: 25px;
   }
 
 }
