--- a/projects/style.css
+++ b/projects/style.css
@@ -39,6 +39,20 @@ h1 {
   font-size: 50px;
 }
 
+h2{
+  text-align: center;
+  color: #b4c9e4;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 32px;
+  font-weight: normal
+}
+p{
+  text-align: center;
+  color: #b4c9e4;
+  font-family: "Ubuntu", sans-serif;
+  font-size: 20px;
+}
+
 @media only screen and (max-width: 800px) {
   
   .topnav a{
@@ -53,47 +67,3 @@ h1 {
     padding-top: 3px;
   }
 } 
-.page-wrapper {
-  position: relative;
-  background: #ffffff;
-  height: 160px;
-  overflow: hidden;
-  border-radius: 10px;
-}
-
-.link-background {
-  background-color: #E2EAF5;
-  background-position: 50%;
-  background-size: auto 100%;
-  height: 160px;
-  width: 100%;
-  background-repeat: no-repeat;
-}
-
-.link-title {
-  background: #ffffff;
-  padding: 14px 20px;
-  font-weight: 700;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  white-space: nowrap;
-  font-size: 17px;
-  border-radius: 5px;
-  display: flex;
-  align-items: flex-end;
-  z-index: 2;
-  color: #333333 !important;
-  opacity: 0;
-  font-size: 16px;
-  font-family: Roboto, sans-serif;
-  text-align: center;
-}
-.link-title:hover{
-  opacity: 1;
-}
-.link-background:hover + .link-title{
-  opacity: 1;
-}
