🍍🌌 Checkpoint ./projects/style.css:31343558/36 ./projects/unblockedgames66/index.html:31343558/3094

--- a/projects/style.css
+++ b/projects/style.css
@@ -41,14 +41,14 @@ h1 {
 
 h2{
   text-align: center;
-  color: #b4c9e4;
+  color: #BFD1E8;
   font-family: "Ubuntu", sans-serif;
   font-size: 32px;
   font-weight: normal
 }
 p{
   text-align: center;
-  color: #b4c9e4;
+  color: #D4E0F0;
   font-family: "Ubuntu", sans-serif;
   font-size: 20px;
 }
