🍯🍮 Checkpoint ./projects/unblockedgames66/index.html:31343558/297 ./projects/style.css:31343558/87

--- a/projects/style.css
+++ b/projects/style.css
@@ -17,6 +17,10 @@ body {
   background-color: #333333;
 }
 
+a{
+  color: #5E8BC5;
+}
+
 .topnav a {
   display: inline-block;
   overflow: hidden;
@@ -62,6 +66,7 @@ p{
   margin-top: 20px;
   line-height: 1.4;
 }
+
 
 @media only screen and (max-width: 800px) {
   
