--- a/projects/style.css
+++ b/projects/style.css
@@ -71,6 +71,12 @@ p{
   margin-top: 20px;
   line-height: 1.4;
 }
+.date {
+  font-size: 20px;
+  font-family: "Radio Canada", sans-serif;
+  opacity: .7;
+  color: #c8dbed;
+}
 
 
 @media only screen and (max-width: 800px) {
