--- a/blog/style.css
+++ b/blog/style.css
@@ -34,10 +34,11 @@ p {
 }
 img {
   border: 4px solid #0F202F;
-  width: 70%;
+  width: 60%;
   border-radius: 30px;
   display: block;
   margin: auto;
+  margin-top: 10px;
 }
 pre {
   border: 4px solid #0F202F;
@@ -54,6 +55,16 @@ pre {
 
 a{
   color: #538FC7;
+}
+
+h2{
+  text-align: center;
+  font-family: lucid;
+  color: #A4C4E2;
+  font-size: 40px;
+  width: 85%;
+  margin: auto;
+  margin-top: 50px;
 }
 
 button{
@@ -99,9 +110,12 @@ td{
     padding: 30px;
   }
   h1 {
-    font-size: 70px;
+    font-size: 50px;
   }
+  h2 {
+    font-size: 35px;
   }
+}
 @media (max-width: 800px) {
   body {
     padding: 15px;
@@ -120,6 +134,9 @@ td{
     width: 90%;
     overflow: auto;
     display: block;
+  }
+  h2{
+    font-size: 25px;
   }
 
 }
