--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0px;
 }
 
-img {
+.homeImg {
   width: 60px;
   padding-left: 5px;
   padding-right: 15px;
@@ -30,6 +30,7 @@ img {
 
 .topnav a:hover {
   opacity: 0.6;
+  transition: 0.4s;
 }
 
 h1 {
@@ -64,7 +65,7 @@ h1 {
     font-size: 15px;
   }
   
-  img {
+  .homeImg {
     width: 45px;
     padding-left: 3px;
     padding-right: 8px;
@@ -120,9 +121,15 @@ h1 {
 }
 .link-title:hover{
   opacity: 1;
+  transition: .4s;
 }
 .link-background:hover + .link-title{
   opacity: 1;
+  transition: .4s;
+}
+.link-background:hover{
+  opacity: 0.5;
+  transition: .4s;
 }
 
 
