--- a/blog/style.css
+++ b/blog/style.css
@@ -34,7 +34,7 @@ p {
 }
 img {
   border: 4px solid #0F202F;
-  width: 60%;
+  width: 40%;
   border-radius: 30px;
   display: block;
   margin: auto;
@@ -54,7 +54,12 @@ pre {
 }
 
 a{
-  color: #538FC7;
+  color: #03BFF6;
+  text-decoration: none;
+}
+
+a:hover{
+  text-decoration: underline;
 }
 
 h2{
