--- a/style.css
+++ b/style.css
@@ -62,8 +62,8 @@ h1 {
   }
   
   .topnav a{
-    padding: 9px 6px;
-    font-size: 15px;
+    padding: 10px 7px;
+    font-size: 20px;
   }
   
   .homeImg {
@@ -79,6 +79,11 @@ h1 {
     grid-gap: 10px;
     padding: 0 8px;
     grid-template-columns: repeat(1, 2fr);
+  }
+  
+  .topnav a{
+    padding: 9px 6px;
+    font-size: 15px;
   }
 }
   
