--- a/style.css
+++ b/style.css
@@ -39,6 +39,14 @@ h1 {
   font-family: "Ubuntu", sans-serif;
 }
 
+p{
+  text-align: center;
+  color: #b4c9e4;
+  font-family: "Ubuntu", sans-serif;
+  width: 70%;
+  margin: auto;
+  font-size: 30px;
+}
 
 .container {
   max-width: 900px;
