--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+
 
 body {
   background-color: #343a40;
@@ -33,6 +35,12 @@ body {
   transition: 0.4s;
 }
 
+hr{
+  width: 50%;
+  margin: 40px;
+  margin-inline: auto;
+}
+
 h1 {
   text-align: center;
   color: #b4c9e4;
@@ -43,7 +51,7 @@ h1 {
 p{
   text-align: center;
   color: #b4c9e4;
-  font-family: "Ubuntu", sans-serif;
+  font-family: "rubik", sans-serif;
   width: 70%;
   margin: auto;
   font-size: 30px;
