🎟❄️ Checkpoint ./index.html:31343558/315 ./style.css:31343558/14

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ hr{
 
 h1 {
   text-align: center;
-  color: #b4c9e4;
+  color: #497BBD;
   font-family: "Ubuntu", sans-serif;
   font-size: 50px;
 }
