👩‍❤️‍💋‍👩🐧 Checkpoint ./index.html:31343558/4635 ./style.css:31343558/224 ./projects.html:31343558/4943 ./blog.html:31343558/5702

--- a/style.css
+++ b/style.css
@@ -60,9 +60,12 @@ p{
 
 button{
   text-align: center;
-  margin: auto;
-  left: 50%;
-}
+  text-decoration: none;
+  list-style-type: none;
+  margin-top: 20px;
+  border: 3px solid black;
+  padding: 0px;
+  }
 
 .container {
   max-width: 900px;
