--- a/style.css
+++ b/style.css
@@ -60,12 +60,24 @@ p{
 
 button{
   text-align: center;
-  text-decoration: none;
-  list-style-type: none;
   margin-top: 20px;
-  border: 3px solid black;
-  padding: 0px;
-  }
+  border: 3px solid #4275B7;
+  padding: 5px;
+  border-radius: 10px;
+  background-color: #BACDE6;
+  font-size: 20px;
+  color: white;
+  cursor: pointer
+}
+
+button:hover{
+  transition-duration: .4s;
+  transform: scale(1.06);
+}
+
+.home-container{
+  text-align: center;
+}
 
 .container {
   max-width: 900px;
