--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
+@font-face {
+  font-family: lucid;
+  src: url("https://cdn.glitch.global/e23c6d22-e86e-4765-a3d2-14f786559329/Euclid%20Circular%20A%20Medium.ttf?v=1651332812845");
+}
+
 
 body {
   background-color: #343a40;
   margin: 0px;
+  margin-bottom: 100px;
 }
 
 .homeImg {
@@ -33,10 +40,48 @@ body {
   transition: 0.4s;
 }
 
+hr{
+  width: 50%;
+  margin: 40px;
+  margin-inline: auto;
+}
+
 h1 {
   text-align: center;
-  color: #b4c9e4;
+  color: #5E8BC5;
   font-family: "Ubuntu", sans-serif;
+  font-size: 50px;
+}
+
+p{
+  text-align: center;
+  color: #b4c9e4;
+  font-family: "rubik", sans-serif;
+  width: 70%;
+  margin: auto;
+  font-size: 30px;
+}
+
+button{
+  text-align: center;
+  margin-top: 20px;
+  border: 3px solid #4275B7;
+  padding: 10px 15px;
+  border-radius: 15px;
+  background-color: #A3BCDE;
+  font-size: 25px;
+  color: white;
+  cursor: pointer;
+  font-family: "lucid";
+}
+
+button:hover{
+  transition-duration: .4s;
+  transform: scale(1.08);
+}
+
+.home-container{
+  text-align: center;
 }
 
 .container {
@@ -62,8 +107,8 @@ h1 {
   }
   
   .topnav a{
-    padding: 9px 6px;
-    font-size: 15px;
+    padding: 10px 7px;
+    font-size: 20px;
   }
   
   .homeImg {
@@ -79,6 +124,11 @@ h1 {
     grid-gap: 10px;
     padding: 0 8px;
     grid-template-columns: repeat(1, 2fr);
+  }
+  
+  .topnav a{
+    padding: 9px 6px;
+    font-size: 15px;
   }
 }
   
@@ -132,6 +182,18 @@ h1 {
   opacity: 0.5;
   transition: .4s;
 }
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
