--- a/style.css
+++ b/style.css
@@ -1,206 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Rubik&display=swap');
-@font-face {
-  font-family: lucid;
-  src: url("https://cdn.glitch.global/e23c6d22-e86e-4765-a3d2-14f786559329/Euclid%20Circular%20A%20Medium.ttf?v=1651332812845");
-}
-
-
-body {
-  background-color: #343a40;
-  margin: 0px;
-  margin-bottom: 100px;
-}
-
-.homeImg {
-  width: 60px;
-  padding-left: 5px;
-  padding-right: 15px;
-  padding-top: 5px;
-  cursor: pointer;
-}
-.topnav {
-  background-color: #333333;
-}
-
-.topnav a {
-  display: inline-block;
-  overflow: hidden;
-  color: #cfdcee;
-  padding: 10px 12px;
-  font-size: 25px;
-  cursor: pointer;
-  font-family: "Ubuntu Condensed", sans-serif;
-  text-decoration: none;
-}
-
-.topnav a:hover {
-  opacity: 0.6;
-  transition: 0.4s;
-}
-
-hr{
-  width: 50%;
-  margin-inline: auto;
-}
-
-h1 {
-  text-align: center;
-  color: #5E8BC5;
-  font-family: "Ubuntu", sans-serif;
-  font-size: 50px;
-}
-
-p{
-  text-align: center;
-  color: #b4c9e4;
-  font-family: "rubik", sans-serif;
-  width: 70%;
-  margin: auto;
-  font-size: 30px;
-}
-
-.homeLink{
-  text-align: center;
-  margin-top: 20px;
-  border: 3px solid #4275B7;
-  padding: 10px 15px;
-  border-radius: 15px;
-  background-color: #A3BCDE;
-  font-size: 25px;
-  color: white;
-  cursor: pointer;
-  font-family: "lucid";
-}
-
-.homeLink:hover{
-  transition-duration: .4s;
-  transform: scale(1.08);
-}
-
-.home-container{
-  text-align: center;
-}
-
-.container {
-  max-width: 900px;
-  margin-left: auto;
-  margin-right: auto;
-  color: #333333;
-  
-}
-
-.posts {
-  display: grid;
-  margin-top: 10px;
-  grid-template-columns: repeat(3, 1fr);
-  grid-gap: 15px 15px;
-}
-
-@media only screen and (max-width: 800px) {
-  .posts {
-    grid-gap: 12px;
-    padding: 0 8px;
-    grid-template-columns: repeat(2, 1fr);
-  }
-  
-  .topnav a{
-    padding: 10px 7px;
-    font-size: 20px;
-  }
-  
-  .homeImg {
-    width: 45px;
-    padding-left: 3px;
-    padding-right: 8px;
-    padding-top: 3px;
-  }
-} 
-
-@media only screen and (max-width: 500px) {
-  .posts {
-    grid-gap: 10px;
-    padding: 0 8px;
-    grid-template-columns: repeat(1, 2fr);
-  }
-  
-  .topnav a{
-    padding: 9px 6px;
-    font-size: 15px;
-  }
-}
-  
-.page-wrapper {
-  position: relative;
-  background: #ffffff;
-  height: 160px;
-  overflow: hidden;
-  border-radius: 10px;
-}
-
-.link-background {
-  background-color: #E2EAF5;
-  background-position: 50%;
-  background-size: auto 100%;
-  height: 160px;
-  width: 100%;
-  background-repeat: no-repeat;
-}
-
-.link-title {
-  background: #ffffff;
-  padding: 14px 20px;
-  font-weight: 700;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  pointer-events: none;
-  white-space: nowrap;
-  font-size: 17px;
-  border-radius: 5px;
-  display: flex;
-  align-items: flex-end;
-  z-index: 2;
-  color: #333333 !important;
-  opacity: 0;
-  font-size: 16px;
-  font-family: Roboto, sans-serif;
-  text-align: center;
-}
-.link-title:hover{
-  opacity: 1;
-  transition: .4s;
-}
-.link-background:hover + .link-title{
-  opacity: 1;
-  transition: .4s;
-}
-.link-background:hover{
-  opacity: 0.5;
-  transition: .4s;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu+Condensed&family=Ubuntu:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
 @font-face {
   font-family: lucid;
@@ -242,8 +41,8 @@ body {
 
 hr {
   width: 50%;
-  margin-top: 40px;
   margin-inline: auto;
+  margin-top:20px;
 }
 
 h1 {
@@ -264,7 +63,7 @@ p {
 
 .homeLink {
   text-align: center;
-  margin-top: 20px;
+  margin-top: 100px;
   border: 3px solid #4275b7;
   padding: 10px 15px;
   border-radius: 15px;
@@ -296,39 +95,6 @@ p {
   margin-top: 10px;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 15px 15px;
-}
-
-@media only screen and (max-width: 800px) {
-  .posts {
-    grid-gap: 12px;
-    padding: 0 8px;
-    grid-template-columns: repeat(2, 1fr);
-  }
-
-  .topnav a {
-    padding: 10px 7px;
-    font-size: 20px;
-  }
-
-  .homeImg {
-    width: 45px;
-    padding-left: 3px;
-    padding-right: 8px;
-    padding-top: 3px;
-  }
-}
-
-@media only screen and (max-width: 500px) {
-  .posts {
-    grid-gap: 10px;
-    padding: 0 8px;
-    grid-template-columns: repeat(1, 2fr);
-  }
-
-  .topnav a {
-    padding: 9px 6px;
-    font-size: 15px;
-  }
 }
 
 .page-wrapper {
@@ -382,6 +148,54 @@ p {
   transition: 0.4s;
 }
 
+.dropdown {
+  overflow: hidden;
+  display: inline-block;
+}
+
+.dropdown .dropbtn {
+  border: none;
+  outline: none;
+  background-color: inherit;
+  margin: 0;
+  display: inline-block;
+  overflow: hidden;
+  color: #cfdcee;
+  padding: 10px 12px;
+  font-size: 25px;
+  cursor: pointer;
+  font-family: "Ubuntu Condensed", sans-serif;
+  text-decoration: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #2c2c2c;
+  min-width: 120px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.dropdown-content a {
+  float: none;
+  color: #cfdcee;
+  padding: 8px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 18px;
+}
+
+.dropbtn:hover,
+.dropdown-content a:hover {
+  opacity: 0.6;
+  transition: 0.4s;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
 .collapsible {
   background-color: transparent;
   cursor: pointer;
@@ -410,4 +224,37 @@ p {
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
+}
+
+@media only screen and (max-width: 800px) {
+  .posts {
+    grid-gap: 12px;
+    padding: 0 8px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .topnav a {
+    padding: 10px 7px;
+    font-size: 20px;
+  }
+
+  .homeImg {
+    width: 45px;
+    padding-left: 3px;
+    padding-right: 8px;
+    padding-top: 3px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .posts {
+    grid-gap: 10px;
+    padding: 0 8px;
+    grid-template-columns: repeat(1, 2fr);
+  }
+
+  .topnav a {
+    padding: 9px 6px;
+    font-size: 15px;
+  }
 }
