--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ body {
 hr {
   width: 50%;
   margin-inline: auto;
-  margin-top:20px;
+  margin-top:15px;
+  margin-bottom: 0px;
 }
 
 h1 {
@@ -50,6 +51,7 @@ h1 {
   color: #5e8bc5;
   font-family: "Ubuntu", sans-serif;
   font-size: 50px;
+  margin-top: 15px;
 }
 
 p {
@@ -63,7 +65,8 @@ p {
 
 .homeLink {
   text-align: center;
-  margin-top: 100px;
+  margin-top: 20px;
+  margin-bottom: 10px;
   border: 3px solid #4275b7;
   padding: 10px 15px;
   border-radius: 15px;
