🔦🚧 Checkpoint ./style.css:31343558/279

--- a/style.css
+++ b/style.css
@@ -209,6 +209,8 @@ p {
   color: #5e8bc5;
   font-family: "Ubuntu", sans-serif;
   font-size: 50px;
+  margin-inline: auto;
+  width: 50%;
 }
 
 .collapsible:after {
