--- a/style.css
+++ b/style.css
@@ -210,7 +210,6 @@ p {
   font-family: "Ubuntu", sans-serif;
   font-size: 50px;
   margin-inline: auto;
-  width: 50%;
 }
 
 .collapsible:after {
@@ -238,7 +237,7 @@ p {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .topnav a {
+  .topnav a, .dropdown .dropbtn {
     padding: 10px 7px;
     font-size: 20px;
   }
@@ -249,6 +248,7 @@ p {
     padding-right: 8px;
     padding-top: 3px;
   }
+  
 }
 
 @media only screen and (max-width: 500px) {
@@ -257,9 +257,10 @@ p {
     padding: 0 8px;
     grid-template-columns: repeat(1, 2fr);
   }
-
-  .topnav a {
-    padding: 9px 6px;
-    font-size: 15px;
+  p{
+    font-size: 20px
+  }
+  .collapsible{
+    font-size: 30px;
   }
 }
