--- a/projects/style.css
+++ b/projects/style.css
@@ -77,13 +77,60 @@ p{
   opacity: .7;
   color: #c8dbed;
 }
+.dropdown {
+  overflow: hidden;
+  display: inline-block;
+}
+
+.dropdown .dropbtn {
+  border: none;
+  outline: none;
+  background-color: inherit;
+  margin: 0;
+  display: inline-block;
+  overflow: hidden;
+  color: #cfdcee;
+  padding: 10px 12px;
+  font-size: 25px;
+  cursor: pointer;
+  font-family: "Ubuntu Condensed", sans-serif;
+  text-decoration: none;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #2c2c2c;
+  min-width: 120px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+}
+
+.dropdown-content a {
+  float: none;
+  color: #cfdcee;
+  padding: 8px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  font-size: 18px;
+}
+
+.dropbtn:hover,
+.dropdown-content a:hover {
+  opacity: 0.6;
+  transition: 0.4s;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 
 @media only screen and (max-width: 800px) {
   
-  .topnav a{
-    padding: 9px 6px;
-    font-size: 15px;
+  .topnav a, .dropdown .dropbtn {
+    padding: 10px 7px;
+    font-size: 20px;
   }
   
   .homeImg {
