--- a/style.css
+++ b/style.css
@@ -177,6 +177,7 @@ p {
   background-color: #2c2c2c;
   min-width: 120px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.4);
+  z-index: 10;
 }
 
 .dropdown-content a {
